@@ -41,6 +41,7 @@ exec ${CMD} \
   --add-opens=java.base/java.net=ALL-UNNAMED \
   --add-opens=java.base/java.text=ALL-UNNAMED \
   --add-opens=java.sql/java.sql=ALL-UNNAMED \
+  --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED \
   -cp $1/conf:lib/* \
   oap.application.Boot \
   --start \
